--- a/templates/college/dashboard.html
+++ b/templates/college/dashboard.html
@@ -8,9 +8,9 @@
         <div class="col-12">
             <h1>
                 <i class="bi bi-mortarboard text-primary"></i>
-                College Competition
+                {{ COMPETITION.college_title }}
             </h1>
-            <p class="text-muted">{{ tournament.name }} {{ tournament.year }} - Friday</p>
+            <p class="text-muted">{{ tournament.name }} {{ tournament.year }} - {{ COMPETITION.college_day }}</p>
         </div>
     </div>
 
@@ -45,7 +45,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="card h-100">
                         <div class="card-header bg-primary text-white">
-                            <h6 class="mb-0"><i class="bi bi-trophy"></i> Bull of the Woods (Top 5 Men)</h6>
+                            <h6 class="mb-0"><i class="bi bi-trophy"></i> {{ COMPETITION.bull_of_woods }} (Top 5 Men)</h6>
                         </div>
                         <div class="card-body">
                             {% if bull %}
@@ -70,7 +70,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="card h-100">
                         <div class="card-header bg-info text-white">
-                            <h6 class="mb-0"><i class="bi bi-trophy"></i> Belle of the Woods (Top 5 Women)</h6>
+                            <h6 class="mb-0"><i class="bi bi-trophy"></i> {{ COMPETITION.belle_of_woods }} (Top 5 Women)</h6>
                         </div>
                         <div class="card-body">
                             {% if belle %}
