--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Dashboard - Missoula Pro Am Manager{% endblock %}
+{% block title %}Dashboard - {{ COMPETITION.app_title }}{% endblock %}
 
 {% block content %}
 <div class="container-fluid py-4">
@@ -8,7 +8,7 @@
         <div class="col-12">
             <h1 class="mb-4">
                 <i class="bi bi-tree-fill text-success"></i>
-                Missoula Pro Am Tournament Manager
+                {{ COMPETITION.app_title }}
             </h1>
         </div>
     </div>
