--- a/templates/pro/dashboard.html
+++ b/templates/pro/dashboard.html
@@ -8,9 +8,9 @@
         <div class="col-12">
             <h1>
                 <i class="bi bi-trophy text-warning"></i>
-                Pro Competition
+                {{ COMPETITION.pro_title }}
             </h1>
-            <p class="text-muted">{{ tournament.name }} {{ tournament.year }} - Saturday</p>
+            <p class="text-muted">{{ tournament.name }} {{ tournament.year }} - {{ COMPETITION.pro_day }}</p>
         </div>
     </div>
 
